<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInAccountActivity"
    android:background="@drawable/bg_gradient"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".LoginActivity"
        android:padding="15dp"
        android:layout_centerInParent="true"
        >


        <ImageView
            android:id="@+id/circularImageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:layout_marginBottom="25dp"
            />



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextSignInEmail"
            android:hint="@string/usernamelogin"
            android:padding="@dimen/padding10"
            android:background="@drawable/edit_text_bg"
            android:layout_marginLeft="5dp"
            android:textColorHint="@color/colorGrayLight"
            android:textColor="@color/colorGrayLight"
            android:layout_margin="5dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_below="@+id/circularImageView"

            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextSignInPassword"
            android:hint="@string/passwordlogin"
            android:padding="@dimen/padding10"
            android:background="@drawable/edit_text_bg"
            android:layout_marginLeft="5dp"
            android:textColorHint="@color/colorGrayLight"
            android:textColor="@color/colorGrayLight"
            android:layout_below="@id/editTextSignInEmail"
            android:layout_margin="5dp"
            android:inputType="textPassword"
            />

        <!--<ToggleButton-->
            <!--android:id="@+id/tbShowPass"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@id/editTextSignInEmail"-->
            <!--android:layout_alignEnd="@id/editTextSignInPassword"-->

            <!--android:background="@null"-->
            <!--android:textOff="HIDE"-->
            <!--android:textOn="SHOW" />-->

        <!--<ImageButton-->
            <!--android:id="@+id/imgShowPass"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignEnd="@id/editTextSignInPassword"-->
            <!--android:layout_below="@id/editTextSignInEmail"-->
            <!--android:background="@null"-->
            <!--android:layout_margin="10dp"-->
            <!--android:src="@drawable/show_32px"-->
            <!--/>-->


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkbox"
            android:layout_below="@id/editTextSignInPassword"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:text="@string/remembermelogin"
            android:textColor="@color/colorGrayLight"
            android:checked="false"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonSignIn"
            android:text="@string/forgotyourpassword"
            android:textAllCaps="false"
            android:textColor="@color/colorGrayLight"
            android:padding="5dp"
            android:id="@+id/forgot"
            android:layout_margin="5dp"
            />

        <TextView
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/go_login_page"
            android:padding="15dp"
            android:text="@string/signinlogin"
            android:textAlignment="center"
            android:textColor="@color/backgroundgreen"
            android:textStyle="bold"
            android:layout_below="@id/checkbox"
            android:layout_margin="5dp"
            />



    </RelativeLayout>

</RelativeLayout>