<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpAccountActivity"
    android:background="@drawable/bg_gradient"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".LoginActivity"
        android:padding="15dp"
        android:layout_centerInParent="true"
        >

        <ImageView
            android:id="@+id/circularImageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:layout_marginBottom="25dp"
            />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextSignUpName"
            android:hint="@string/usernameregister"
            android:padding="@dimen/padding10"
            android:background="@drawable/edit_text_bg"
            android:layout_marginLeft="5dp"
            android:textColorHint="@color/colorGrayLight"
            android:textColor="@color/colorGrayLight"
            android:layout_margin="5dp"
            android:layout_below="@+id/circularImageView"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextSignInEmail"
            android:hint="@string/emailregister"
            android:padding="@dimen/padding10"
            android:background="@drawable/edit_text_bg"
            android:layout_marginLeft="5dp"
            android:textColorHint="@color/colorGrayLight"
            android:textColor="@color/colorGrayLight"
            android:layout_margin="5dp"
            android:layout_below="@+id/editTextSignUpName"
            android:inputType="textEmailAddress"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextSignUpPassword"
            android:hint="@string/passwordregister"
            android:padding="@dimen/padding10"
            android:background="@drawable/edit_text_bg"
            android:layout_marginLeft="5dp"
            android:textColorHint="@color/colorGrayLight"
            android:textColor="@color/colorGrayLight"
            android:layout_margin="5dp"
            android:layout_below="@+id/editTextSignInEmail"
            android:inputType="textPassword"

            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextSignUpPassword"
            android:text="@string/signupregister"
            android:textAllCaps="false"
            android:background="@drawable/login_btn"
            android:textColor="@color/colorLoginBtn"
            android:padding="15dp"
            android:textStyle="bold"
            android:textSize="16dp"
            android:id="@+id/buttonSignUp"
            android:layout_margin="5dp"
            android:textAlignment="center"
            />

    </RelativeLayout>

</RelativeLayout>